fix scrollbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -392,7 +392,6 @@ a:hover {
   overflow: hidden;
 }
 
-
 div::-webkit-scrollbar-track {
   /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
   /* border-radius: 10px; */
@@ -401,6 +400,7 @@ div::-webkit-scrollbar-track {
   -webkit-overflow-scrolling: touch;
 }
 div::-webkit-scrollbar {
+  -webkit-appearance: none;
   height: 0.5em;
   /* background-color: var(--accent3); */
   border:0;
